fix partners logo alignment for mobile (SAF)

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -530,6 +530,7 @@ h1.flexible {
   .partners img.bg {
     width: 100%;
     margin: 0 0 1.5rem 0;
+    max-height: 240px;
   }
   
   .partners svg {
